--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+            <version>1.4.193</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.persistence</groupId>
