--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
 			<version>2.6.1</version>
 			<scope>compile</scope>
 		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
